// <auto-generated />
using System;
using DocParseLab.Server.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;

#nullable disable

namespace DocParseLab.Server.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20260516064634_ExtendedFeatures")]
    partial class ExtendedFeatures
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "8.0.10")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("DocParseLab.Server.Models.AppUser", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int?>("DepartmentId")
                        .HasColumnType("integer");

                    b.Property<string>("DisplayName")
                        .HasColumnType("text");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("PasswordSalt")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Role")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("DepartmentId");

                    b.HasIndex("Email")
                        .IsUnique();

                    b.ToTable("Users");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.AuditLogEntry", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Details")
                        .HasColumnType("text");

                    b.Property<string>("IpAddress")
                        .HasColumnType("text");

                    b.Property<string>("Resource")
                        .HasColumnType("text");

                    b.Property<string>("UserEmailSnapshot")
                        .HasColumnType("text");

                    b.Property<int?>("UserId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("CreatedAt");

                    b.HasIndex("UserId");

                    b.ToTable("AuditLogEntries");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.Department", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("Name")
                        .IsUnique();

                    b.ToTable("Departments");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentAccessLog", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<string>("IpAddress")
                        .HasColumnType("text");

                    b.Property<int?>("UserId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("UserId");

                    b.HasIndex("DocumentId", "CreatedAt");

                    b.ToTable("DocumentAccessLogs");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentApprovalStep", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime?>("ActedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("ApproverUserId")
                        .HasColumnType("integer");

                    b.Property<string>("Comment")
                        .HasColumnType("text");

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<string>("Status")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("StepOrder")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("ApproverUserId");

                    b.HasIndex("DocumentId", "StepOrder")
                        .IsUnique();

                    b.ToTable("DocumentApprovalSteps");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentComment", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<string>("Text")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("UserId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("DocumentId");

                    b.HasIndex("UserId");

                    b.ToTable("DocumentComments");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentShare", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<int>("FromUserId")
                        .HasColumnType("integer");

                    b.Property<DateTime>("SharedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("ToUserId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("DocumentId");

                    b.HasIndex("FromUserId");

                    b.HasIndex("ToUserId");

                    b.ToTable("DocumentShares");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentSignature", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Comment")
                        .HasColumnType("text");

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<string>("SignatureKind")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime>("SignedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("SignedByUserId")
                        .HasColumnType("integer");

                    b.Property<string>("SignerDisplayNameSnapshot")
                        .HasColumnType("text");

                    b.Property<string>("SignerEmailSnapshot")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("SignerRoleSnapshot")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("TextHashSha256")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("SignedByUserId");

                    b.HasIndex("DocumentId", "SignedAt");

                    b.ToTable("DocumentSignatures");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentVersion", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("ChangeType")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int?>("CreatedByUserId")
                        .HasColumnType("integer");

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<string>("Text")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("VersionNumber")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("CreatedByUserId");

                    b.HasIndex("DocumentId", "VersionNumber")
                        .IsUnique();

                    b.ToTable("DocumentVersions");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentWorkflowHistory", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Comment")
                        .HasColumnType("text");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<int?>("UserId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("CreatedAt");

                    b.HasIndex("DocumentId");

                    b.HasIndex("UserId");

                    b.ToTable("DocumentWorkflowHistory");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.ParsedDocument", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("AiSummary")
                        .HasColumnType("text");

                    b.Property<DateTime?>("ApprovalDueAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int?>("CurrentApproverUserId")
                        .HasColumnType("integer");

                    b.Property<string>("DataClassification")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int?>("DepartmentId")
                        .HasColumnType("integer");

                    b.Property<string>("DocumentType")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime?>("EditedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("EditedText")
                        .HasColumnType("text");

                    b.Property<string>("FileName")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("FullText")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("OriginalFileType")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("OriginalStorageKey")
                        .HasColumnType("text");

                    b.Property<int?>("OwnerId")
                        .HasColumnType("integer");

                    b.Property<string>("ProcessingProfile")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int?>("ResponsibleUserId")
                        .HasColumnType("integer");

                    b.Property<string>("StructuredJson")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime?>("SubmittedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Tags")
                        .HasColumnType("text");

                    b.Property<string>("Title")
                        .HasColumnType("text");

                    b.Property<DateTime>("UploadedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("WorkflowComment")
                        .HasColumnType("text");

                    b.Property<DateTime?>("WorkflowCompletedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("WorkflowStatus")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("CurrentApproverUserId");

                    b.HasIndex("DepartmentId");

                    b.HasIndex("OwnerId");

                    b.HasIndex("ResponsibleUserId");

                    b.HasIndex("WorkflowStatus");

                    b.ToTable("ParsedDocuments");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.UserNotification", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Body")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int?>("DocumentId")
                        .HasColumnType("integer");

                    b.Property<bool>("IsRead")
                        .HasColumnType("boolean");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("UserId")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("UserId", "IsRead", "CreatedAt");

                    b.ToTable("UserNotifications");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.AppUser", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.Department", "Department")
                        .WithMany("Users")
                        .HasForeignKey("DepartmentId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("Department");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.AuditLogEntry", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.AppUser", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("User");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentAccessLog", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("AccessLogs")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.AppUser", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("Document");

                    b.Navigation("User");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentApprovalStep", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.AppUser", "Approver")
                        .WithMany()
                        .HasForeignKey("ApproverUserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("ApprovalSteps")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Approver");

                    b.Navigation("Document");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentComment", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("Comments")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.AppUser", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Document");

                    b.Navigation("User");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentShare", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("Shares")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.AppUser", "FromUser")
                        .WithMany("SentShares")
                        .HasForeignKey("FromUserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.AppUser", "ToUser")
                        .WithMany("ReceivedShares")
                        .HasForeignKey("ToUserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Document");

                    b.Navigation("FromUser");

                    b.Navigation("ToUser");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentSignature", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("Signatures")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.AppUser", "SignedByUser")
                        .WithMany()
                        .HasForeignKey("SignedByUserId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Document");

                    b.Navigation("SignedByUser");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentVersion", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.AppUser", "CreatedByUser")
                        .WithMany()
                        .HasForeignKey("CreatedByUserId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("Versions")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("CreatedByUser");

                    b.Navigation("Document");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.DocumentWorkflowHistory", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.ParsedDocument", "Document")
                        .WithMany("WorkflowHistory")
                        .HasForeignKey("DocumentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("DocParseLab.Server.Models.AppUser", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("Document");

                    b.Navigation("User");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.ParsedDocument", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.AppUser", "CurrentApprover")
                        .WithMany()
                        .HasForeignKey("CurrentApproverUserId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.HasOne("DocParseLab.Server.Models.Department", "Department")
                        .WithMany("Documents")
                        .HasForeignKey("DepartmentId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.HasOne("DocParseLab.Server.Models.AppUser", "Owner")
                        .WithMany("Documents")
                        .HasForeignKey("OwnerId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.HasOne("DocParseLab.Server.Models.AppUser", "ResponsibleUser")
                        .WithMany()
                        .HasForeignKey("ResponsibleUserId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("CurrentApprover");

                    b.Navigation("Department");

                    b.Navigation("Owner");

                    b.Navigation("ResponsibleUser");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.UserNotification", b =>
                {
                    b.HasOne("DocParseLab.Server.Models.AppUser", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("User");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.AppUser", b =>
                {
                    b.Navigation("Documents");

                    b.Navigation("ReceivedShares");

                    b.Navigation("SentShares");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.Department", b =>
                {
                    b.Navigation("Documents");

                    b.Navigation("Users");
                });

            modelBuilder.Entity("DocParseLab.Server.Models.ParsedDocument", b =>
                {
                    b.Navigation("AccessLogs");

                    b.Navigation("ApprovalSteps");

                    b.Navigation("Comments");

                    b.Navigation("Shares");

                    b.Navigation("Signatures");

                    b.Navigation("Versions");

                    b.Navigation("WorkflowHistory");
                });
#pragma warning restore 612, 618
        }
    }
}
